static/css/index.css
@font-face {
  font-family: 'UbuntuMono';
  font-style: normal;
  font-weight: 400;
  font-stretch: 100%;
  src: url("../fonts/ubuntu_mono/UbuntuMono-Regular.ttf") format('truetype');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

@font-face {
  font-family: 'UbuntuMono';
  font-style: normal;
  font-weight: 700; 
  src: url("../fonts/ubuntu_mono/UbuntuMono-Bold.ttf") format('truetype');
}

@font-face {
  font-family: 'Bakudai';
  font-style: normal;
  font-weight: 400;
  font-stretch: 100%;
  src: url("../fonts/bakudai/Bakudai-Regular.ttf") format('truetype');
  /* unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; */
}

body {
  /* background: linear-gradient(to top, #000000, #dacfb0); */
  font-family: "UbuntuMono", sans-serif;
  background-color: rgba(255, 255, 255, 0);
  color: black;
  position: relative;
}

body::before {
  content: '';
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url('../img/bg.jpg');
  background-position: bottom -60vh right;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  opacity: 0.6;
  z-index: -2;
}

body::after {
  content: '';
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.7);
  z-index: -1;
}

/* #twn_toggle {
  font-family: "Bakudai", sans-serif;
} */

.weight_bold{
  font-weight: bold;
  text-decoration: underline;
}

.smoke{
  
  transition: opacity 0.5s ease; 
  opacity: 0;
}



.switch_text{
  color:black;
  font-weight: bold;
  cursor: pointer;
  display: inline-block;
}


  
.salutation-en{
  color: black;
  font-weight: bold;
  cursor: pointer;
  display: inline-block;
}

.salutation-twn{
  color: black;
  font-weight: bold;
  cursor: pointer;
  display: inline-block;
}

#application_form{
  color:rgb(109, 123, 120);
  text-decoration: underline;
  font-weight: bold;
}

.BDCimage{
  opacity: 0;
  transition: opacity 0.5s ease;
}

  #calendar iframe {
    filter: grayscale(100%);
  }
  .calendar-responsive {
  position: relative;
  width: 100%;
  padding-bottom: 75%; 
  height: 0;
  overflow: hidden;
}

.calendar-responsive iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
}

